[gd_scene load_steps=8 format=3 uid="uid://dw20qe8ouhfgf"]

[ext_resource type="Texture2D" uid="uid://du3mavtjjmthv" path="res://assets/background.png" id="1_5y38f"]
[ext_resource type="Script" path="res://main.gd" id="1_q35sn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dh368"]
bg_color = Color(0, 0.666667, 0.811765, 1)
border_color = Color(0.8, 0.12549, 0.8, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_3n5hw"]
/colors/border = Color(0, 0, 0, 1)
ItemList/constants/h_separation = 40
ItemList/constants/line_separation = 20
ItemList/constants/v_separation = 10
ItemList/styles/panel = SubResource("StyleBoxFlat_dh368")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a2m2n"]
bg_color = Color(0.6, 0.6, 0.6, 0.45098)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_agb4e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5kc6f"]
bg_color = Color(0.392157, 0.643137, 0.709804, 1)
border_color = Color(0.8, 0.8, 0.8, 0.545098)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q35sn")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 647.0
texture = ExtResource("1_5y38f")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 188.0
offset_top = 189.0
offset_right = -157.0
offset_bottom = -249.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="DisplayText" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.976471, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Quem descobriu o brasil?"
autowrap_mode = 3
justification_flags = 171

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme = SubResource("Theme_3n5hw")
theme_override_colors/font_color = Color(0.403922, 0.423529, 0.0117647, 1)
theme_override_colors/font_hovered_color = Color(0.168627, 0.47451, 0.827451, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0.572549, 1)
theme_override_colors/font_outline_color = Color(0.956863, 0, 0, 1)
theme_override_colors/guide_color = Color(0, 0.858824, 0, 1)
theme_override_styles/panel = SubResource("StyleBoxFlat_a2m2n")
theme_override_styles/focus = SubResource("StyleBoxEmpty_agb4e")
auto_height = true
item_count = 2
item_0/text = "Questão 01."
item_1/text = "Questão 02."

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainerButton" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_5kc6f")
text = "Reset"

[connection signal="item_selected" from="VBoxContainer/ItemList" to="." method="onAnwserIsSelected"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="onClickResetButton"]
